k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sm-app
  labels:
    app: sm-app
