k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sm-app
  annotations:
    kubernetes.io/change-cause: "Initial Deployment"
  labels:
    app: sm-app
    component: backend

spec:
  # replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: sm-app
      component: backend

  template:
    metadata:
      labels:
        app: sm-app
        component: backend

    spec:
      serviceAccountName: backend-pod-sm
      containers:
        - name: backend
          image: prashidha333/sm-backend:v1.0.2

          ports:
            - containerPort: 3000
              name: http

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
