k8s/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sm-app
  labels:
    app: sm-app
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: sm-app
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
